<resources>
    <string name="app_name">ProjectRoomate</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">You have been invited to my roommate app</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_item">Add Item</string>
    <string name="add_payment_rent">Add Rent</string>
    <string name="add_payment_electric">Add Electric</string>
    <string name="add_payment_gas">Add Gas</string>
    <string name="add_payment_water">Add Water</string>
    <string name="add_payment_internet">Add Internet</string>
    <string name="leave_lobby">Leave Lobby</string>
</resources>
